// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render while loading 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <styled.div />
  </styled.div>
  <Footer />
</styled.div>
`;

exports[`render with errors 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      primary="first"
      split="vertical"
    >
      <Editor
        style={
          Object {
            "height": "100%",
          }
        }
        theme="solarized light"
      />
      <styled.div>
        <Connect(Options) />
        <Connect(SearchPanel) />
        <UASTViewer />
      </styled.div>
    </SplitPane>
  </styled.div>
  <Footer />
  <Notifications>
    <Error
      key="0"
      message="error1"
      onRemove={[Function]}
    />
    <Error
      key="1"
      message="error2"
      onRemove={[Function]}
    />
  </Notifications>
</styled.div>
`;

exports[`renders without crashing 1`] = `
<styled.div>
  <Connect(Header) />
  <styled.div>
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      primary="first"
      split="vertical"
    >
      <Editor
        style={
          Object {
            "height": "100%",
          }
        }
        theme="solarized light"
      />
      <styled.div>
        <Connect(Options) />
        <Connect(SearchPanel) />
        <UASTViewer />
      </styled.div>
    </SplitPane>
  </styled.div>
  <Footer />
</styled.div>
`;
